# reference-node

./: .gitignore  CHANGELOG.md  CHANGELOG_TRANSPORT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  IROH_API_MAPPING.md  IROH_MIGRATION_PLAN_REVIEW.md  NODE_ASSESSMENT.md  README.md  SECURITY.md  clippy.toml  tarpaulin.toml
.cargo/: config.toml
.github/workflows/: .trigger  CACHING_ANALYSIS.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_PLAN.md  VALIDATION.md  build-chain.yml  ci.yml  release.yml
benches/: compact_blocks.rs  dandelion_bench.rs  storage_operations.rs  transport_comparison.rs
docs/: HIGH_AVAILABILITY.md  INTEGRATION_GUIDE.md  MODULE_SYSTEM.md  NETWORK_VERIFICATION.md  QUIC_RPC.md  QUINN_INTEGRATION.md  README.md  RPC_REFERENCE.md
docs/history/: NODE_ASSESSMENT.md  README.md
docs/history/migrations/: IROH_MIGRATION_PLAN.md  IROH_MIGRATION_SUMMARY.md
docs/status/: IROH_API_INTEGRATION_STATUS.md  RPC_IMPLEMENTATION_STATUS.md
docs/transport/: README_TRANSPORT_ABSTRACTION.md
examples/: README.md  electrum-integration.rs  rpc_server_bench.rs  wallet-integration.rs
examples/simple-module/: Cargo.toml  README.md  module.toml
examples/simple-module/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compact_block_reconstruction.rs  mining_block_template.rs  mining_transaction_serialization.rs  protocol_message_parsing.rs  transport_aware_negotiation.rs
modules/: README.md
src/: bech32m.rs  bip157.rs  bip158.rs  bip21.rs  bip21_installer_guide.md  bip70.rs  lib.rs
src/config/: mod.rs
src/config/examples/: pruning_aggressive_utxo_commitments.json  pruning_custom_light_client.json  pruning_disabled.json  pruning_normal.json
src/governance/: mod.rs  user_signaling.rs  webhook.rs
src/module/: manager.rs  mod.rs  traits.rs
src/module/api/: blockchain.rs  events.rs  hub.rs  mod.rs  node_api.rs
src/module/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/module/loader/: loader.rs  mod.rs
src/module/process/: mod.rs  monitor.rs  spawner.rs
src/module/registry/: dependencies.rs  discovery.rs  manifest.rs  mod.rs
src/module/sandbox/: filesystem.rs  mod.rs  network.rs  process.rs
src/module/security/: mod.rs  permissions.rs  validator.rs
src/module/validation/: manifest_validator.rs  mod.rs
src/network/: address_db.rs  ban_list_merging.rs  ban_list_signing.rs  bip157_handler.rs  bip70_handler.rs  chain_access.rs  compact_blocks.rs  dandelion.rs  dns_seeds.rs  dos_protection.rs  erlay.rs  fibre.rs  filter_service.rs  inventory.rs  iroh_transport.rs  kani_helpers.rs  message_bridge.rs  mod.rs  package_relay.rs  package_relay_handler.rs  peer.rs  protocol.rs  protocol_adapter.rs  protocol_extensions.rs  protocol_proofs.rs  quinn_transport.rs  rate_limiter_proofs.rs  relay.rs  service_flags_tests.rs  state_machine_proofs.rs  tcp_transport.rs  transport.rs  txhash.rs  utxo_commitments_client.rs
src/network/stratum_v2/: client.rs  error.rs  merge_mining.rs  messages.rs  miner.rs  mod.rs  pool.rs  protocol.rs  server.rs
src/network/tests/: concurrency_stress_tests.rs
src/node/: block_processor.rs  event_publisher.rs  health.rs  mempool.rs  mempool_proofs.rs  metrics.rs  miner.rs  mod.rs  performance.rs  sync.rs
src/rpc/: auth.rs  blockchain.rs  control.rs  errors.rs  mempool.rs  mining.rs  mod.rs  network.rs  quinn_server.rs  rawtx.rs  rpc_proofs.rs  server.rs  server_profiling.rs  types.rs  validation.rs
src/storage/: blockstore.rs  chainstate.rs  chainstate_proofs.rs  commitment_store.rs  cryptographic_proofs.rs  database.rs  hashing.rs  kani_helpers.rs  mod.rs  pruning.rs  txindex.rs  utxostore.rs  utxostore_proofs.rs
src/utils/: arc.rs  async_helpers.rs  circuit_breaker.rs  env.rs  error.rs  lock.rs  logging.rs  mod.rs  option.rs  retry.rs  signal.rs  time.rs  timeout.rs  validation.rs
src/validation/: mod.rs
tests/: async_routing_tests.rs  ban_list_integration_tests.rs  ban_list_tests.rs  bip158_implementation_tests.rs  bip70_tests.rs  common.rs  dandelion_property.rs  dandelion_relay_integration.rs  dandelion_suite.rs  feature_flags_reflection_tests.rs  fee_calculation_tests.rs  iroh_peer_tracking_tests.rs  mempool_tests.rs  mining_property_tests.proptest-regressions  mining_property_tests.rs  mining_rpc_implementation_tests.rs  mining_rpc_tests.rs  module_process_sharing_tests.rs  network_tests.rs  node_tests.rs  peer_stats_tests.rs  protocol_message_processing_tests.rs  quic_rpc_smoke_tests.rs  rpc_routing_tests.rs  rpc_tests.rs  security_tests.rs  service_flags_tests.rs  storage_arcs_tests.rs  storage_tests.rs  stratum_v2_mining_tests.rs
tests/integration/: async_routing_integration_tests.rs  basic.rs  connection_recovery_tests.rs  dos_protection_tests.rs  full_node_tests.rs  graceful_degradation_tests.rs  hybrid_mode_tests.rs  message_bridge_tests.rs  mining_comprehensive_tests.rs  mining_integration_tests.rs  mod.rs  multi_transport_tests.rs  protocol_adapter_tests.rs  pruning_integration_tests.rs  quinn_transport_tests.rs  rpc_auth_tests.rs  stratum_v2_quinn_tests.rs  transport_tests.rs  user_signaling_integration.rs  utxo_commitments_tests.rs
tests/module/: api_tests.rs  lifecycle_tests.rs  mod.rs  security_tests.rs  test_utils.rs
tests/property/: node_invariants_tests.rs
tests/security/: ban_list_sharing_tests.rs  dos_scenario_tests.rs  memory_leak_tests.rs  mod.rs  stress_tests.rs
tests/storage/: mod.rs  pruning_tests.rs
tools/: convert-bitcoin-core-config.rs  convert-bitcoin-core-config.sh  test-config-converter.sh  validate-converted-config.sh
