[package]
name = "bllvm-node"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLLVM: Minimal Bitcoin node implementation using bllvm-protocol and bllvm-consensus"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm-node"
homepage = "https://btcdecoded.org"
documentation = "https://docs.rs/bllvm-node"
keywords = ["bitcoin", "node", "blockchain", "cryptocurrency", "p2p"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Protocol abstraction layer - Local path for development
# This transitively provides bllvm-consensus, so we only need this one dependency
bllvm-protocol = { path = "../bllvm-protocol", package = "bllvm-protocol" }

# Storage layer - EXACT VERSIONS for security
sled = { version = "=0.34.7", optional = true }
redb = { version = "1.4", optional = true }

# Networking layer - EXACT VERSIONS for security
tokio = { version = "=1.35.1", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "=0.7.10", features = ["codec", "io"] }
futures = "=0.3.30"
# HTTP server - EXACT VERSIONS for security
http = "=1.1.0"
http-body-util = "=0.1.1"
hyper = { version = "=1.3.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "=0.1.5", features = ["server", "http1", "tokio"] }

# Serialization - EXACT VERSIONS for security
serde = { version = "=1.0.193", features = ["derive"] }
serde_json = "=1.0.108"
serde_bytes = "=0.11.14"  # For byte array serialization in protocol messages
bincode = "=1.3.3"
bytes = "=1.5.0"
uuid = { version = "=1.6.0", features = ["v4"] }
toml = "=0.8.2"

# Cryptography - EXACT VERSIONS for security
secp256k1 = "=0.28.2"  # For BIP70 Bitcoin signature verification
sha2 = "=0.10.9"
ripemd = "=0.1.3"
hex = "=0.4.3"
siphasher = "=0.3"

# Random number generation for Dandelion++
rand = "=0.8.5"

# Address encoding (BIP173/350/351)
bech32 = "=0.9"

# Error handling - EXACT VERSIONS for security
anyhow = "=1.0.93"
thiserror = "=1.0.69"

# Logging - EXACT VERSIONS for security
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

# CLI - EXACT VERSIONS for security
clap = { version = "=4.4.11", features = ["derive"] }

# Async traits - for transport abstraction
async-trait = "=0.1.75"

# Bitflags for transport preference combinations
bitflags = "2.4"

# Memory allocator optimization (not in bllvm-consensus to maintain Kani compatibility)
mimalloc = { version = "0.1", default-features = false }

# Parallel processing for block validation (Phase 4.2)
rayon = { version = "1.8", optional = true }

# System information for memory stats (optional feature)
sysinfo = { version = "0.30", optional = true }

# Iroh networking (optional feature)
iroh-net = { version = "0.12", optional = true }
# Quinn QUIC transport (optional feature - can be used standalone or via Iroh)
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.11", optional = true }
rustls = { version = "0.23", optional = true }

[features]
default = ["sysinfo", "redb"]
iroh = ["dep:iroh-net", "dep:quinn"]
quinn = ["dep:quinn", "dep:rcgen", "dep:rustls"]
utxo-commitments = ["bllvm-protocol/utxo-commitments"]
stratum-v2 = []
# System information for memory stats
sysinfo = ["dep:sysinfo"]
# Storage backends
sled = ["dep:sled"]
redb = ["dep:redb"]
# Production optimizations (parallel block validation, etc.)
production = ["bllvm-protocol/production", "dep:rayon"]
# Privacy relay (Dandelion++) compiled behind feature flag; default OFF
dandelion = []

[dev-dependencies]
tempfile = "=3.8.1"
rand = "0.8"
cargo-tarpaulin = "0.27"
criterion = "0.5"
proptest = "1.4.0"

# Release profile optimizations (mirrors bllvm-consensus)
[profile.release]
# Production optimizations (mirrors bllvm-consensus)
opt-level = 3
lto = "fat"  # Fat LTO for maximum optimization
codegen-units = 1  # Single codegen unit maximizes LTO benefits
strip = true  # Remove symbols for smaller binaries
panic = "abort"  # Smaller binaries, no unwinding overhead

[profile.release.package."*"]
opt-level = 3

# Benchmark profile
[profile.bench]
opt-level = 3
debug = false
strip = false
lto = "thin"
codegen-units = 16

# Benchmark targets
[[bench]]
name = "compact_blocks"
harness = false

[[bench]]
name = "storage_operations"
harness = false

[[bench]]
name = "transport_comparison"
harness = false