[package]
name = "bllvm-node"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Bitcoin Commons BLLVM: Minimal Bitcoin node implementation using bllvm-protocol and bllvm-consensus"
license = "MIT"
repository = "https://github.com/BTCDecoded/bllvm-node"
homepage = "https://btcdecoded.org"
documentation = "https://docs.rs/bllvm-node"
keywords = ["bitcoin", "node", "blockchain", "cryptocurrency", "p2p"]
categories = ["cryptography::cryptocurrencies", "network-programming"]
rust-version = "1.82"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(feature, values("governance"))'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Protocol abstraction layer - Local path for development
# This transitively provides bllvm-consensus, so we only need this one dependency
bllvm-protocol = { path = "../bllvm-protocol", package = "bllvm-protocol" }

# Storage layer - EXACT VERSIONS for security
sled = { version = "=0.34.7", optional = true }
redb = { version = "=1.4", optional = true }

# Networking layer - EXACT VERSIONS for security
tokio = { version = "=1.48.0", features = ["full", "rt-multi-thread"] }  # Updated for iroh 0.95 compatibility (requires ^1.44.1)
tokio-util = { version = "=0.7.17", features = ["codec", "io"] }  # Updated for iroh 0.95 compatibility (requires ^0.7.14)
futures = "=0.3.31"  # Updated for iroh 0.95 compatibility (requires ^0.3.31)
# HTTP server - EXACT VERSIONS for security
http = "=1.1.0"
http-body-util = "=0.1.1"
hyper = { version = "=1.8.0", features = ["server", "http1", "http2"] }  # Updated for iroh 0.95 compatibility (hyper-util 0.1.18 requires ^1.8.0)
hyper-util = { version = "=0.1.18", features = ["server", "http1", "tokio"] }  # Updated for iroh 0.95 compatibility (requires ^0.1.11)

# Serialization - EXACT VERSIONS for security
serde = { version = "=1.0.228", features = ["derive"] }  # Updated for iroh 0.95 compatibility (requires ^1.0.219)
serde_json = "=1.0.108"
serde_bytes = "=0.11.19"  # Updated for iroh 0.95 compatibility (requires ^0.11.17)
bincode = "=1.3.3"
bytes = "=1.10.1"  # Updated for iroh 0.95 compatibility (requires ^1.7)
uuid = { version = "=1.6.0", features = ["v4"] }
toml = "=0.8.2"

# Cryptography - EXACT VERSIONS for security
secp256k1 = "=0.28.2"  # For BIP70 Bitcoin signature verification
sha2 = "=0.10.9"
ripemd = "=0.1.3"
hex = "=0.4.3"
siphasher = "=0.3"
zeroize = { version = "1.7", features = ["zeroize_derive"] }  # Secure secret handling

# Random number generation for Dandelion++
rand = "=0.8.5"
# For iroh SecretKey generation in tests (avoids RNG version conflicts)
getrandom = "=0.2"

# Address encoding (BIP173/350/351)
bech32 = "=0.9"

# Error handling - EXACT VERSIONS for security
anyhow = "=1.0.93"
thiserror = "=1.0.69"

# Logging - EXACT VERSIONS for security
tracing = "=0.1.41"  # Updated for iroh 0.95 compatibility (requires ^0.1.41)
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }

# CLI - EXACT VERSIONS for security
clap = { version = "=4.4.11", features = ["derive"] }

# Async traits - for transport abstraction
async-trait = "=0.1.75"

# Bitflags for transport preference combinations
bitflags = "^2.6"

# Memory allocator optimization (not in bllvm-consensus to maintain Kani compatibility)
# Disabled for Windows cross-compilation (mimalloc linking issues with MinGW)
[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc = { version = "=0.1", default-features = false }

# System calls for process sandboxing (Unix)
nix = { version = "0.28", features = ["process", "resource"], optional = true }
libc = { version = "0.2", optional = true }

# Parallel processing for block validation (Phase 4.2)
rayon = { version = "1.8", optional = true }

# System information for memory stats (optional feature)
sysinfo = { version = "0.30", optional = true }

# HTTP client for governance webhooks (optional feature)
reqwest = { version = "0.12", features = ["json"], optional = true }

# Iroh networking (optional feature)
# Updated to iroh 0.95 to fix security vulnerabilities in iroh-net 0.12
iroh = { version = "0.95", optional = true }
# Quinn QUIC transport (optional feature - can be used standalone)
# Note: quinn_transport.rs uses quinn directly (independent of iroh)
# iroh 0.95 wraps quinn internally via iroh-quinn, so quinn is not needed for iroh feature
quinn = { version = "0.10", optional = true }
rcgen = { version = "0.11", optional = true }
# rustls version is determined by quinn 0.10 (uses rustls 0.21)
# Only specify if quinn feature is not enabled
rustls = { version = "0.21", optional = true }

# Security Note: Migrated from iroh-net 0.12 to iroh 0.95 to fix vulnerabilities:
# - idna 0.4.0 (RUSTSEC-2024-0421) - FIXED in iroh 0.95
# - ring 0.16.20 (RUSTSEC-2025-0009) - FIXED in iroh 0.95
# - rsa 0.9.8 (RUSTSEC-2023-0071) - FIXED in iroh 0.95
# - paste 1.0.15 (unmaintained) - FIXED in iroh 0.95
#
# iroh 0.95 uses actively maintained dependencies and fixes all known security issues.

[features]
default = ["sysinfo", "redb", "nix", "libc", "utxo-commitments", "production", "governance"]
iroh = ["dep:iroh"]
quinn = ["dep:quinn", "dep:rcgen", "dep:rustls"]
utxo-commitments = ["bllvm-protocol/utxo-commitments"]
stratum-v2 = []
# Block filtering (BIP158)
bip158 = []
# Signature operations counting
sigop = []
# System information for memory stats
sysinfo = ["dep:sysinfo"]
# Storage backends
sled = ["dep:sled"]
redb = ["dep:redb"]
# Process sandboxing (Unix)
nix = ["dep:nix", "dep:libc"]
libc = ["dep:libc"]
# Production optimizations (parallel block validation, etc.)
production = ["bllvm-protocol/production", "dep:rayon"]
# Privacy relay (Dandelion++) compiled behind feature flag; default OFF
dandelion = []
# CTV (BIP119 CheckTemplateVerify) - passed through from bllvm-protocol
ctv = ["bllvm-protocol/ctv"]
# Governance webhook integration
governance = ["dep:reqwest"]

# Formal verification (Kani model checking) - verification only, not in release builds
verify = ["kani-verifier"]

[dependencies.kani-verifier]
version = "=0.41.0"
optional = true

[dev-dependencies]
tempfile = "=3.8.1"
rand = "0.8"
cargo-tarpaulin = "0.27"
criterion = "0.5"
proptest = "1.4.0"
dhat = "0.3"  # Heap profiling
serial_test = "3.0"  # Sequential test execution for database isolation

# Release profile optimizations (mirrors bllvm-consensus)
[profile.release]
# Production optimizations (mirrors bllvm-consensus)
opt-level = 3
lto = "fat"  # Fat LTO for maximum optimization
codegen-units = 1  # Single codegen unit maximizes LTO benefits
strip = true  # Remove symbols for smaller binaries
panic = "abort"  # Smaller binaries, no unwinding overhead

[profile.release.package."*"]
opt-level = 3

# Benchmark profile
[profile.bench]
opt-level = 3
debug = false
strip = false
lto = "thin"
codegen-units = 16

# Benchmark targets
# Benchmarks have been moved to bllvm-bench crate
# See: https://github.com/BTCDecoded/bllvm-bench

# Examples
[[example]]
name = "electrum-integration"
path = "examples/electrum-integration.rs"

[[example]]
name = "wallet-integration"
path = "examples/wallet-integration.rs"

# Tools
[[bin]]
name = "convert-bitcoin-core-config"
path = "tools/convert-bitcoin-core-config.rs"