[package]
name = "simple-module"
version = "0.1.0"
edition = "2021"
authors = ["BTCDecoded Team"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
bytes = "1.5"

# Note: In a real module, you would depend on a shared module-sdk crate
# that provides the IPC client and types. For this example, we'll
# reference the types directly (this won't compile as-is, but shows structure)

[profile.release]
opt-level = 3

